# advmla_assignment_3

./: Makefile  README.md  pyproject.toml  requirements.txt
advmla_assignment_3/: __init__.py  dataset.py  features.py  plots.py
advmla_assignment_3/modeling/: predict.py  train.py
assignment_3_api/: Dockerfile  README.md  requirements.txt
assignment_3_api/app/: main.py  pipeline_components.py
assignment_3_streamlit/: README.md
assignment_3_streamlit/app/: main.py  utils.py
assignment_3_streamlit/app/students/: sol_25739083.py
notebooks/: Solana_XGBoost.ipynb
