[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "advmla_assignment_3"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "ManhTuan_Nguyen" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["advmla_assignment_3"]
include = ["pyproject.toml", "advmla_assignment_3/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["advmla_assignment_3"]
force-sort-within-sections = true

